# overengineering

./: .gitignore  Cargo.toml  LICENSE  README.md  config.yaml  diesel.toml  test.html
.github/workflows/: deploy.yaml
members/: aidan.yaml  ampersandia.yaml  arcade.yaml  caramellow.yaml  celeste.yaml  claire.yaml  danny.yaml  hackermon.yaml  hypnotic.yaml  ishan.yaml  jack.yaml  jasper.yml  jia.yaml  jmibo.yaml  kaidevrim.yaml  karan.yaml  khalby786.yaml  khaleel.yaml  kieran_klukas.yaml  kimeiga.yaml  kognise.yaml  matthandzel.yaml  muirrum.yaml  munvoseli.yaml  neelr.yaml  nils.yaml  perrypal.yaml  roylatgnail.yaml  sam.yaml  seirdy.yaml  skylar_bleed.yaml  sugarfi.yaml  themathjester.yaml  uli.yaml  warren.yaml  wave.yaml  zaira.yaml
migrations/2026-02-10-063207-0000_create_hits/: down.sql  up.sql
src/: config.rs  health.rs  lib.rs  main.rs  models.rs  schema.patch  schema.rs
src/seasonal/: valentines.js
