[package]
name = "overengineering"
version = "0.1.0"
authors = ["Kognise <hi@kognise.dev>"]
edition = "2018"

[dependencies]
rocket = "0.5.0-rc.1"
serde = "1.0.133"
serde_yaml = "0.8.23"
lazy_static = "1.4.0"
minify-html-onepass = "0.18.1"
rand = "0.8.4"
include_dir = "0.7.4"
anyhow = "1.0.100"
reqwest = "0.12.24"
serde_json = "1.0.145"
rocket_cors = "0.6.0"
chrono = "0.4.42"
